SFDCProject/src/objects/Custom_Email_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Database_Field_Name__c</fullName>
        <label>Database Field Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Value__c</fullName>
        <label>Default Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Field_Name__c</fullName>
        <label>Email Field Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object_For_Duplicate_Field__c</fullName>
        <label>Object For Duplicate Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_Data_Type__c</fullName>
        <label>Output Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Name__c</fullName>
        <label>Parent Object Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Email Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Type__c</columns>
        <columns>Email_Field_Name__c</columns>
        <columns>Parent_Object_Name__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Database_Field_Name__c</columns>
        <columns>Object_For_Duplicate_Field__c</columns>
        <columns>Default_Value__c</columns>
        <columns>Output_Data_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Site Audit Schedule</value>
        </filters>
        <filters>
            <field>Email_Field_Name__c</field>
            <operation>equals</operation>
            <value>{{Site Audit Scheduled}}</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Custom Email Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Email Field Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>